data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_547.wast
;; 8. **Test Description**:    - Combine `br_table` with `nop` instructions between each table entry and validate jump targets and branch behavior.    - **Constraint Checked**: Correct branching behavior with `br_table` and intervention of `nop` instructions.    - **Relation to CFG**: Validates CFG handling of `br_table` with intermittent `nop` ensuring correct branch target resolution.

(assert_invalid
  (module
    (func $test_br_table
      (block $label0
        (br_table $label0 $label0
          (nop)
          (nop)
          (i32.const 0))
      )
    )
  )
  "type mismatch"
)